tentando fazer o desafio 12

--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -13,10 +13,10 @@
 
 h1 {
    display: block;
-   magin-blo
 }
 
 header {
+    font-family: var(--fonte3);
     background-color: black;
     min-width: 150px;
     text-align: center;
